Created initial calculator graphics.
Created initial calculator graphics.

--- a/index.html
+++ b/index.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
     <link rel="stylesheet" href="style.css">
+    <title>Calculator</title>
 </head>
 <body>
-    
+    <div id="background">
+        <div id="widgetContainer">
+            <div id="calculatorBackground">
+                <div class="display"></div>
+
+                <div id="clearDeleteContainer">
+                    <button class="clearDeleteButtonStyle clear">Clear</button>
+                    <button class="clearDeleteButtonStyle delete">Delete</button>
+                </div>
+
+                <div id="operationContainer">
+                    <button class="opperationButtonStyle 7">7</button>
+                    <button class="opperationButtonStyle 8">8</button>
+                    <button class="opperationButtonStyle 9">9</button>
+                    <button class="opperationButtonStyle ÷">÷</button>
+                    <button class="opperationButtonStyle 4">4</button>
+                    <button class="opperationButtonStyle 5">5</button>
+                    <button class="opperationButtonStyle 6">6</button>
+                    <button class="opperationButtonStyle x">x</button>
+                    <button class="opperationButtonStyle 1">1</button>
+                    <button class="opperationButtonStyle 2">2</button>
+                    <button class="opperationButtonStyle 3">3</button>
+                    <button class="opperationButtonStyle -">-</button>
+                    <button class="opperationButtonStyle .">.</button>
+                    <button class="opperationButtonStyle 0">0</button>
+                    <button class="opperationButtonStyle =">=</button>
+                    <button class="opperationButtonStyle +">+</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="javascript.js"></script>
 </body>
 </html>
