Got calculator calculating.
Got calculator calculating.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <button class="buttonStyle number" id="2">2</button>
                     <button class="buttonStyle number" id="3">3</button>
                     <button class="buttonStyle operator" id="-">-</button>
-                    <button class="buttonStyle decimal" id=".">.</button>
+                    <button class="buttonStyle number" id=".">.</button>
                     <button class="buttonStyle number" id="0">0</button>
                     <button class="buttonStyle operator" id="=">=</button>
                     <button class="buttonStyle operator" id="+">+</button>
