--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Calculator</title>
 </head>
+
 <body>
     <div id="background">
         <div id="widgetContainer">
@@ -17,8 +19,8 @@
                 </div>
 
                 <div id="clearDeleteContainer">
-                    <button class="clearDeleteButtonStyle clear">Clear</button>
-                    <button class="clearDeleteButtonStyle delete">Delete</button>
+                    <button class="clearDeleteButtonStyle clear" id="clearButton">Clear</button>
+                    <button class="clearDeleteButtonStyle delete" id="deleteButton">Delete</button>
                 </div>
 
                 <div id="operationContainer">
@@ -44,4 +46,5 @@
     </div>
     <script src="javascript.js"></script>
 </body>
+
 </html>
