Finalized look and feel.
Finalized look and feel.

--- a/index.html
+++ b/index.html
@@ -47,4 +47,8 @@
     <script src="javascript.js"></script>
 </body>
 
+<footer>
+    <p style="text-align: center;">Copyright © Anonymous_PC 2022</p>
+</footer>
+
 </html>
